# blast-radius

./: .gitignore  README.md  pyproject.toml
benchmarks/ambiguous_name/: a.py  b.py  expected.json  main.py
benchmarks/decorator/: expected.json  main.py
benchmarks/direct_call/: expected.json  main.py
benchmarks/dynamic_getattr/: expected.json  main.py
benchmarks/higher_order/: expected.json  main.py
benchmarks/import_alias/: expected.json  main.py  util.py
benchmarks/import_from/: expected.json  main.py
benchmarks/import_module/: expected.json  main.py  util.py
benchmarks/inheritance_call/: expected.json  main.py
benchmarks/method_unique/: expected.json  main.py
benchmarks/nested_function/: expected.json  main.py
benchmarks/self_method/: expected.json  main.py
blastradius/: __init__.py  cli.py  coupling.py  diff.py  engine.py  evaluate.py  ir.py
blastradius/parser/: __init__.py  python_parser.py
docs/: APPLICATION_KIT.md  DEMO.md
examples/github-action/: blastradius.yml
examples/shop/app/: api.py  cart.py  payments.py  tax.py
examples/shop/tests/: test_payments.py
server/: ai.py  analysis.py  auth.py  db.py  main.py
server/static/: index.html
server/static/css/: graph.css  main.css  themes.css
server/static/js/: api.js  app.js  auth.js  blast.js  export.js  graph.js  hero.js  layout.js  repos.js  search.js  theme.js  ui.js  utils.js
site/: index.html
tests/: test_api.py  test_blastradius.py  test_coupling.py  test_diff.py  test_evaluate.py
